--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -31,7 +31,7 @@
 
                             <select name="product_type" id="category_product_type"
                                     class="dropdown_item_select checkout_input"
-                                    required="required" th:field="${hotList.productType}" >
+                                    required="required" th:field="${hotList.productType}">
                                 <option value="">Select Product Type</option>
                                 <option th:each="ctgry : ${T(com.oak.bookyourshelf.model.Category.ProductType).values()}"
                                         th:value="${ctgry}"
@@ -240,12 +240,14 @@
                 <!-- First page -->
                     <li th:if="${hotListPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1})}" th:title="${'Page '+ 1}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1})}"
+                           th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
                     </li>
 
-                    <li th:if="${currentPage - 3 > 1}" style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                    <li th:if="${currentPage - 3 > 1}"
+                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
 
                 <!-- Pages -->
                     <li th:if="${hotListPage.totalPages > 2}"
@@ -253,13 +255,15 @@
                                         , hotListPage.totalPages > 2 + currentPage ? currentPage + 2 : hotListPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
 
-                    <li th:if="${currentPage + 3 < hotListPage.totalPages}" style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
+                    <li th:if="${currentPage + 3 < hotListPage.totalPages}"
+                        style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
 
                 <!-- Last page -->
                     <li th:if="${hotListPage.totalPages > 1}"
                         th:class="${currentPage == hotListPage.totalPages} ? 'active'">
                         <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${hotListPage.totalPages})}"
-                           th:text="${hotListPage.totalPages}" style="color: #fbaa1d;" th:title="${'Page '+ hotListPage.totalPages}">
+                           th:text="${hotListPage.totalPages}" style="color: #fbaa1d;"
+                           th:title="${'Page '+ hotListPage.totalPages}">
                         </a>
                     </li>
 
@@ -291,7 +295,7 @@
             productNum: $('#new_hot_list_product_number').val(),
             startDate: $('#new_hot_list_start_date').val(),
             endDate: $('#new_hot_list_end_date').val(),
-            productType : $('#category_product_type option:selected').val(),
+            productType: $('#category_product_type option:selected').val(),
             startTime: $('#new_hot_list_start_time').val(),
             endTime: $('#new_hot_list_end_time').val(),
 
@@ -323,6 +327,7 @@
             })
         }
     });
+
     function validation_check(arr) {
         for (var i = 0; i < arr.length; i++) {
             if (!document.getElementById(arr[i]).checkValidity()) {
@@ -337,14 +342,11 @@
         var pType = $('#category_product_type option:selected').val();
         var x = document.getElementById("new_hot_list_categories");
         var option = document.createElement("option");
-        if (pType === "BOOK")
-        {
+        if (pType === "BOOK") {
 
             option.text = "Kiwi";
             x.add(option);
-        }
-        else
-        {
+        } else {
             option.text = "Banana";
             x.add(option);
         }
