--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-
+<link rel="stylesheet" type="text/css" th:href="@{/static/styles/bootstrap-4.1.2/bootstrap-multiselect.css}">
 <!-- Add hot list button -->
 <div class="address-element-padding">
     <a href="#new_hot_list" class="trans_200" data-toggle="collapse">
@@ -355,5 +355,7 @@
 
 <script th:src="@{/static/js/login.js}"></script>
 <script th:src="@{/static/js/input-mask.js}"></script>
+<script th:src="@{/static/js/checkbox-dropdown.js}"></script>
+<script th:src="@{/static/js/bootstrap-multiselect.js}"></script>
 
 </html>
