empty search value handle

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -179,7 +179,7 @@
         <!-- Search Area -->
         <div class="search-area">
             <form th:action="@{/search-result}">
-                <input type="search" name="search" id="searchValue" placeholder="Type for search">
+                <input type="search" name="search" id="searchValue" placeholder="Type for search" required="required">
                 <button type="submit" id="headerSearch"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
         </div>
