search value warning updated

--- a/src/main/resources/templates/user_details/_search.html
+++ b/src/main/resources/templates/user_details/_search.html
@@ -96,6 +96,6 @@
 </span>
 
 <span th:unless="${keyPage.totalPages >0}">
-<div class="warning-text">There are no search value yet.</div>
+<div class="warning-text">There are no search values yet.</div>
 </span>
 </html>
